# rust-connect4

./: .gitignore  Makefile  README.md
client/: Cargo.toml  index.html  styles.css
client/src/: connect4.rs  lib.rs  main.rs
client/src/components/: connect4.rs  leaderboard.rs  login_form.rs  mod.rs  navbar.rs  register_form.rs
client/src/pages/: login_form.rs
server/: Cargo.toml  Rocket.toml
server/src/: lib.rs  main.rs
