[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["mongodb"] }
rust-argon2 = "1.0"
client = { path = "../client" }
mongodb = "2.4.0"
chrono = "0.4.24"